manifests/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: webapp
  labels:
    app: fastapi-app
spec:
  type: ClusterIP
  selector:
    app: fastapi-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
